--- a/EncLivro/src/main/resources/templates/pesquisa/form.html
+++ b/EncLivro/src/main/resources/templates/pesquisa/form.html
@@ -19,19 +19,33 @@
 
 		<h1 class="mt-3">Bem Vindo ao ENL,busque seus livros
 			favoritos,por autor e titulo</h1>
+			
+			
 		<form th:object="${form}" action="/livro/consultar" method="post">
+			
 			<div class="row">
+				
 				<div class="col-4">
-					<select th:field="*{tipopesquisa}"
-						class=" form-select form-control">
-						<option value="0">selecione um tipo de Pesquisa</option>
+					
+					<select th:field="*{tipoPesquisa}"
+						class=" form-select form-control"  th:errorclass="is-invalid" >
+						<option value="">selecione um tipo de Pesquisa</option>
 						<option th:each="tipo : ${tipos}" th:value="${tipo}"
 							th:text="${tipo}"></option>
 					</select>
+					<div class="invalid-feedback" th:errors="*{tipoPesquisa}">
+							ffffff
+						</div>
 				</div>
-
+				
+				
+				
+				
+				
+					
 				<div class="col-8">
-					<input class="form-control" th:field="*{texto}" />
+					<input class="form-control" th:field="*{texto}"  th:errorclass="is-invalid"  />
+						<div class="invalid-feedback" th:errors="*{texto}"></div>
 				</div>
 
 
